--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gallery-carsousel",
+  "name": "gallery-sliedshow",
   "version": "1.0.1",
   "description": "Simple Gallery Carousel page",
   "main": "index.html",
